--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     <div class="intro-flex" id="heroSection">
         
         <div class="intro-content">
-            <img src="logo.png" alt="Logo" class="main-logo">
+            <img src="Logo.png" alt="Logo" class="main-logo">
             <img src="business-secrets.png" alt="Business Secrets" class="bs-title">
             <h1>Was für ein Verhandlungstyp sind Sie?</h1>
             <p>Mit diesem kostenlosen Verhandlungstyp-Test finden Sie in nur 5 Minuten heraus, wo Ihre Stärken und Potentiale liegen. Schon in Ihrer nächsten Verhandlung werden Sie von diesen Erkenntnissen profitieren.</p>
@@ -395,7 +395,7 @@
     <!-- FORMA ZA PODATKE -->
     <div class="container fade" id="formSection" style="display:none;">
         <div class="page-header-content">
-            <img src="logo.png" alt="Logo" class="main-logo">
+            <img src="Logo.png" alt="Logo" class="main-logo">
             <img src="business-secrets.png" alt="Business Secrets" class="bs-title">
             <h2>Ihre Kontaktdaten</h2>
         </div>
@@ -421,7 +421,7 @@
     <!-- SEKCIJA SA PITANJIMA (nova, kompletna) -->
     <div class="container fade" id="quizSection" style="display:none;">
         <div class="page-header-content">
-            <img src="logo.png" alt="Logo" class="main-logo">
+            <img src="Logo.png" alt="Logo" class="main-logo">
             <img src="business-secrets.png" alt="Business Secrets" class="bs-title">
             <h2>Fragen</h2>
         </div>
@@ -539,7 +539,7 @@
     <!-- ZAHVALNICA -->
     <div class="container fade" id="thankYouSection" style="display:none;">
         <div class="page-header-content">
-            <img src="logo.png" alt="Logo" class="main-logo">
+            <img src="Logo.png" alt="Logo" class="main-logo">
             <img src="business-secrets.png" alt="Business Secrets" class="bs-title">
             <h2>Vielen Dank für Ihre Teilnahme!</h2>
         </div>
