--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
     <div class="intro-flex" id="heroSection">
         
         <div class="intro-content">
-            <img src="Logo.png" alt="Logo" class="main-logo">
-            <img src="business-secrets.png" alt="Business Secrets" class="bs-title">
+            <img src="Logo.PNG" alt="Logo" class="main-logo">
+            <img src="business-secrets.PNG" alt="Business Secrets" class="bs-title">
             <h1>Was für ein Verhandlungstyp sind Sie?</h1>
             <p>Mit diesem kostenlosen Verhandlungstyp-Test finden Sie in nur 5 Minuten heraus, wo Ihre Stärken und Potentiale liegen. Schon in Ihrer nächsten Verhandlung werden Sie von diesen Erkenntnissen profitieren.</p>
             <button class="btn" onclick="goToFormSection()">Verhandlungstyp GRATIS testen!</button>
@@ -395,8 +395,8 @@
     <!-- FORMA ZA PODATKE -->
     <div class="container fade" id="formSection" style="display:none;">
         <div class="page-header-content">
-            <img src="Logo.png" alt="Logo" class="main-logo">
-            <img src="business-secrets.png" alt="Business Secrets" class="bs-title">
+            <img src="Logo.PNG" alt="Logo" class="main-logo">
+            <img src="business-secrets.PNG" alt="Business Secrets" class="bs-title">
             <h2>Ihre Kontaktdaten</h2>
         </div>
         <!-- Progress Bar for Form Section - Temporarily Commented Out -->
@@ -421,8 +421,8 @@
     <!-- SEKCIJA SA PITANJIMA (nova, kompletna) -->
     <div class="container fade" id="quizSection" style="display:none;">
         <div class="page-header-content">
-            <img src="Logo.png" alt="Logo" class="main-logo">
-            <img src="business-secrets.png" alt="Business Secrets" class="bs-title">
+            <img src="Logo.PNG" alt="Logo" class="main-logo">
+            <img src="business-secrets.PNG" alt="Business Secrets" class="bs-title">
             <h2>Fragen</h2>
         </div>
         <div class="progress-container">
@@ -539,8 +539,8 @@
     <!-- ZAHVALNICA -->
     <div class="container fade" id="thankYouSection" style="display:none;">
         <div class="page-header-content">
-            <img src="Logo.png" alt="Logo" class="main-logo">
-            <img src="business-secrets.png" alt="Business Secrets" class="bs-title">
+            <img src="Logo.PNG" alt="Logo" class="main-logo">
+            <img src="business-secrets.PNG" alt="Business Secrets" class="bs-title">
             <h2>Vielen Dank für Ihre Teilnahme!</h2>
         </div>
         <p>Ihre Antworten wurden erfolgreich übermittelt. Sie erhalten in Kürze Ihre Ergebnisse per E-Mail. <E-Mail class=""></E-Mail></p>
