--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             <div class="progress-bar" id="progressBar"></div>
         </div>
         -->
-        <form id="mainQuizForm" action="https://formsubmit.co/tvoj@email.com" method="POST"> <!-- ZAMENI 'tvoj@email.com' SA SVOJOM EMAIL ADRESOM! -->
+        <form id="mainQuizForm" action=https://formsubmit.co/buisness.secret123@gmail.com method="POST"> <!-- ZAMENI 'tvoj@email.com' SA SVOJOM EMAIL ADRESOM! -->
             <!-- Kontakt podaci -->
             <input type="text" name="Vorname" placeholder="Vorname" required><br>
             <input type="text" name="Nachname" placeholder="Nachname" required><br>
