--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
             <input type="text" name="Vorname" placeholder="Vorname" required><br>
             <input type="text" name="Nachname" placeholder="Nachname" required><br>
             <input type="email" name="E-Mail" placeholder="E-Mail" required><br>
+            <input type="tel" name="Telefon" placeholder="Telefonnummer" pattern="[0-9\s\-()]{8,20}" title="Ovdje unesite valjani broj telefona (npr. +49 123 456789, 0123-456789)" required><br>
             <input type="text" name="Unternehmen" placeholder="Unternehmen (optional)"><br>
             <input type="text" name="Position" placeholder="Position (optional)"><br>
             <label style="font-size:0.9em;display:block;margin:10px 0;">
